<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="14dp"
        android:text="@string/saint_petersburg"
        android:textSize="42dp"
        app:layout_constraintBottom_toTopOf="@+id/weatherСonditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherСonditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginBottom="22dp"
        android:text="@string/partially_cloudy"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginLeft="166dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="167dp"
        android:layout_marginRight="167dp"
        android:layout_marginBottom="446dp"
        android:text="19°"
        android:textSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherСonditions" />

    <TextView
        android:id="@+id/todayData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="390dp"
        android:text="@string/today_8_07"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dayOFWeek"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherСonditions"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dayOFWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="391dp"
        android:text="@string/monday"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/todayData"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:layout_constraintVertical_bias="1.0" />

    <TableLayout
        android:id="@+id/weekDays"
        android:layout_width="395dp"
        android:layout_height="374dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayData"
        android:stretchColumns="*"
        >


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_margin="12dp"
                android:text="@string/tuesday"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:scaleType="center"
                android:src="@drawable/cloud">
            </ImageView>

            <TextView
                android:id="@+id/TextView1"
                android:text="18°"
                android:gravity="center_horizontal"
                android:layout_margin="20dp"
                android:typeface="monospace" >
            </TextView>



        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_margin="12dp"
                android:text="@string/wednesday"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:scaleType="center"
                android:src="@drawable/rain">
            </ImageView>

            <TextView
                android:id="@+id/TextView2"
                android:text="14°"
                android:gravity="center_horizontal"
                android:layout_margin="12dp"
                android:typeface="monospace" >
            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_margin="12dp"
                android:text="@string/thursday"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:scaleType="center"
                android:src="@drawable/sun" >
            </ImageView>

            <TextView
                android:id="@+id/TextView3"
                android:text="21°"
                android:gravity="center_horizontal"
                android:layout_margin="12dp"
                android:typeface="monospace" >
            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_margin="12dp"
                android:text="@string/friday"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:scaleType="center"
                android:src="@drawable/partlycloud">
            </ImageView>

            <TextView
                android:id="@+id/TextView4"
                android:text="15°"
                android:gravity="center_horizontal"
                android:layout_margin="12dp"
                android:typeface="monospace" >
            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_margin="12dp"
                android:text="@string/saturday"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:scaleType="center"
                android:src="@drawable/rain"> >
            </ImageView>

            <TextView
                android:id="@+id/TextView5"
                android:text="16°"
                android:gravity="center_horizontal"
                android:layout_margin="12dp"
                android:typeface="monospace" >
            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_margin="12dp"
                android:text="@string/sunday"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:scaleType="center"
                android:src="@drawable/rain" >
            </ImageView>

            <TextView
                android:id="@+id/TextView6"
                android:text="15°"
                android:gravity="center_horizontal"
                android:layout_margin="12dp"
                android:typeface="monospace" >
            </TextView>

        </TableRow>



    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>